# meeko-test

./: README.rst  movies.csv  pyproject.toml
meeko/: __main__.py
tests/: test_meeko.py
